[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/EnemyAssets/tank_enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/MoveEnemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Extras/Enrivorment/Light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 91.5 )

[sub_resource type="CircleShape2D" id=5]
radius = 335.006

[node name="MoveEnemy" type="KinematicBody2D"]
rotation = 1.5708
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -1, 29.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DetectArea" type="Area2D" parent="." groups=["MoveEnemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 9.30362, 11.6023 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
energy = 1.34
shadow_enabled = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="area_entered" from="DetectArea" to="." method="_on_DetectArea_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
